# featurescripts

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT.md  TOOLS_READY.md  WAIST_SOLVER_FIX.md  pyproject.toml
.claude/: featurescript-corrections.md  settings.json  settings.local.json
footprint/: .claude.md  analyzeFootprint.fs  arcFit.fs  fpt_analyze.fs  fpt_constants.fs  fpt_geometry.fs  fpt_math.fs  integrateFootprint.fs  predicates.fs  scaleFootprint.fs
footprint_integration/: fpt_geometry.fs
gordonSurface/: .claude.md  constEnums.fs  gordonCurveCompatibility.fs  gordonKnotOps.fs  gordonSurface.fs  interiorCurves.fs  modifyCurveEnd.fs  scaledCurve.fs  simplifySurface.fs
integrationPrompts/: README.md  requirements.txt
std/: .claude.md  bsurf.fs  common.fs  compositePart.fs  containers.fs  context.fs  coordSystem.fs  curveGeometry.fs  editCurve.fs  evaluate.fs  feature.fs  fillSurface.fs  geometry.fs  isoparametricCurve.fs  manipulatertype.gen.fs  manipulator.fs  manipulatordragtypeenum.gen.fs  manipulatorstyleenum.gen.fs  manipulatortype.gen.fs  math.fs  mathUtils.fs  matrix.fs  matrixWithUnits.fs  nurbsUtils.fs  offsetCurveOnFace.fs  offsetSurface.fs  query.fs  queryVariable.fs  ruledSurface.fs  sktch.fs  splineUtils.fs  surfaceGeometry.fs  transform.fs  transformUV.fs  units.fs  variable.fs  variabletype.gen.fs  vector.fs
sync/: README.md  config.yaml  main.py  verify_auth.py
tests/: __init__.py  test_auth.py
tools/: .claude.md  COMPLETION_CHECKLIST.md  README.md  arc_length.fs  assertions.fs  bspline_data.fs  bspline_knots.fs  (+10 more)
(+31 files in other folders)
